making the connections at the level of the backend